--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,7 @@
 }
 
 .custom-navbar {
-  z-index: 1000;
+  z-index: 10000;
 }
 
 #navbarNavAltMarkup {
@@ -49,7 +49,6 @@ main {
 
 .section1 {
   background-color: #131748;
-  height: 72vh;
 }
 
 .section1 .divArticle1 {
@@ -67,8 +66,9 @@ main {
   height: auto;
 }
 
-.botonAsociate {
+#btnDeAsociate {
   z-index: 1;
+  top: auto;
 }
 
 .section2 {
