--- a/css/backend.css
+++ b/css/backend.css
@@ -7,3 +7,81 @@
   border: 5px solid #131748;
   border-radius: 5px;
 }
+
+.mensajesDeGuardar {
+  height: 50px;
+}
+
+.noticiaItem[hidden] {
+  display: none;
+}
+
+.botonVerMas {
+  background-color: #ffffff;
+  color: #131748;
+  border: 2px solid #131748;
+}
+
+.botonVerMas:hover {
+  background-color: #131748;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
+main {
+  color: #131748;
+}
+
+.noticias img {
+  width: 55vw;
+  height: auto;
+}
+
+.sectionDeNoticias {
+  border-top: 5px solid #131748;
+}
+
+.sectionDeProductos {
+  border-top: 5px solid #131748;
+}
+
+.producto {
+  border: 2px solid #131748;
+  border-radius: 5px;
+}
+
+.producto img {
+  width: 20vw;
+  height: auto;
+}
+
+.producto p {
+  font-size: small;
+}
+
+@media screen and (min-width: 576px) {
+  .noticias img {
+    width: 40vw;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .noticias img {
+    width: 20vw;
+    height: auto;
+  }
+
+  .producto img {
+    width: 15vw;
+    height: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Aquí defines el espacio entre productos */
+  }
+}
