--- a/css/estilos.css
+++ b/css/estilos.css
@@ -324,9 +324,8 @@ iframe {
   display: flex;
   align-items: center;
   /*fondo AKD*/
-  background-image: url("../media/akdDobleDoble.png");
-  background-repeat: repeat;
-  background-size: 72px 54px; /* Ajusta el tamaño del patrón */
+  background-image: url("../media/fondoAkdRepetido.png");
+  background-size: 800px 336px; /* Ajusta el tamaño del patrón */
 }
 
 .owl-carouselP {
@@ -460,6 +459,10 @@ footer svg {
     width: 40vw;
     height: auto;
   }
+  .carruselProductos {
+    /*fondo AKD*/
+    background-size: 960px 403px; /* Ajusta el tamaño del patrón */
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -502,9 +505,7 @@ footer svg {
 
   .carruselProductos {
     /*fondo AKD*/
-    background-image: url("../media/akdDobleDoble.png");
-    background-repeat: repeat;
-    background-size: 144px 108px; /* Ajusta el tamaño del patrón */
+    background-size: 1166px 443px; /* Ajusta el tamaño del patrón */
   }
 
   .divEscudoRacing {
@@ -562,10 +563,22 @@ footer svg {
   .mainClub p {
     font-size: large;
   }
+  .carruselProductos {
+    /*fondo AKD*/
+    background-size: 1166px 443px; /* Ajusta el tamaño del patrón */
+  }
 }
 
 @media screen and (min-width: 1200px) {
+  .carruselProductos {
+    /*fondo AKD*/
+    background-size: 1440px 604px; /* Ajusta el tamaño del patrón */
+  }
 }
 
 @media screen and (min-width: 1440px) {
+  .carruselProductos {
+    /*fondo AKD*/
+    background-size: 2000px 838px; /* Ajusta el tamaño del patrón */
+  }
 }
