--- a/css/formulario.css
+++ b/css/formulario.css
@@ -28,3 +28,17 @@ body {
 .mainFormulario div {
   font-size: 3rem;
 }
+
+#textoWhtasApp {
+  color: #25d366;
+}
+
+#botonWhatsApp {
+  color: #25d366;
+  border: #25d366 solid 3px;
+  background-color: #131748;
+}
+
+#botonWhatsApp:hover {
+  background-color: #ffffff;
+}
